--- a/widsdatathon2020/wids-2020-starter-catboost.ipynb
+++ b/widsdatathon2020/wids-2020-starter-catboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "[91713 rows x 28 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2536,7 +2536,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "debfada9b2a6471a9399ec761d1cf1bc",
+       "model_id": "2a4992b37e1a41b3b02d0e1d9df17323",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2551,7 +2551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'learn': {'Logloss': 0.16505317113577136}}\n"
+      "{'learn': {'Logloss': 0.16505328826406834}}\n"
      ]
     }
    ],
@@ -4578,7 +4578,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6997e93bb19452789693a57e0aaaa80",
+       "model_id": "aaec8020b55a40d9b8ed167e7b332198",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4588,17 +4588,33 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0:\tloss: 0.4163594\tbest: 0.4163594 (0)\ttotal: 1h 15m 9s\tremaining: 2d 10h 52m 23s\n",
+      "1:\tloss: 0.3988435\tbest: 0.3988435 (1)\ttotal: 1h 25m 36s\tremaining: 1d 8h 48m 53s\n",
+      "2:\tloss: 0.4005204\tbest: 0.3988435 (1)\ttotal: 1h 30m 27s\tremaining: 22h 36m 57s\n",
+      "3:\tloss: 0.4027134\tbest: 0.3988435 (1)\ttotal: 3h 47m 54s\tremaining: 1d 17h 46m 54s\n",
+      "4:\tloss: 0.4022011\tbest: 0.3988435 (1)\ttotal: 3h 53m 27s\tremaining: 1d 9h 27m 46s\n",
+      "5:\tloss: 0.4024914\tbest: 0.3988435 (1)\ttotal: 3h 56m 44s\tremaining: 1d 3h 37m 10s\n",
+      "6:\tloss: 0.4036836\tbest: 0.3988435 (1)\ttotal: 13h 50m 27s\tremaining: 3d 9h 4m 8s\n",
+      "7:\tloss: 0.4041994\tbest: 0.3988435 (1)\ttotal: 14h 10m 34s\tremaining: 2d 22h 52m 50s\n",
+      "8:\tloss: 0.4094779\tbest: 0.3988435 (1)\ttotal: 14h 22m 59s\tremaining: 2d 14h 19m 37s\n"
+     ]
     }
    ],
    "source": [
     "### hyperparameter tuning example grid for catboost : \n",
-    "grid = {'learning_rate': [0.005, 0.01, 0.04, 0.08, 0.12],\n",
+    "grid = {'learning_rate': [0.001, 0.05, 0.1],\n",
     "        'depth': [3, 6, 10, 13],\n",
-    "        'l2_leaf_reg': [1, 3, 6, 9, 13],\n",
-    "        \"iterations\": [500000],\n",
+    "        'l2_leaf_reg': [3, 6, 9, 13],\n",
+    "        \"iterations\": [50000],\n",
     "       \"custom_metric\":['AUC'],\n",
     "       'early_stopping_rounds': [400],\n",
-    "       'class_weights': [[1, 10]]}\n",
+    "       'class_weights': [[1, 10]],\n",
+    "       'task_type': [\"GPU\"]}\n",
     "\n",
     "model = CatBoostClassifier()\n",
     "\n",
@@ -4607,7 +4623,7 @@
     "                                       train_pool,\n",
     "                                       plot=True,\n",
     "                                       refit = True, #  refit best model on all data\n",
-    "                                      partition_random_seed=42, cv=3,\n",
+    "                                      partition_random_seed=42,\n",
     "                                      stratified = True)\n",
     "\n",
     "print(model.get_best_score())\n",
@@ -4670,7 +4686,8 @@
     "        \"iterations\": [500000],\n",
     "       \"custom_metric\":['AUC'],\n",
     "       'early_stopping_rounds': [400],\n",
-    "       'class_weights': [[1, 10]]}\n",
+    "       'class_weights': [[1, 10]],\n",
+    "       'task_type': [\"GPU\"]}\n",
     "\n",
     "model = CatBoostClassifier()\n",
     "\n",
